<resources>
    <string name="app_name">challange_app</string>
    <string name="challange">"Challange "</string>
    <string name="calculator">Calculadora</string>
    <string name="listview">ListView</string>
    <string name="btn_mostrar">Mostrar Selecção</string>
    <string name="spinner">Spinner</string>
    <string name="first_numer">1º Número</string>
    <string name="second_numer">2º Número</string>
    <string name="total_compra">TOTAL DAS COMPRAS</string>
    <string name="digite_salario">Digite seu sálario</string>
    <string name="qual_valor">Marque o seu percentual</string>
    <string name="calc_new">CALCULAR NOVO SALÁRIO</string>
    <string name="text_informacoes">Informações da pessoa</string>
    <string name="txt_name">Insira o nome</string>
    <string name="btn_add">Adicionar</string>
    <string name="btn_delete">Apagar Pessoa</string>
    <string name="txt_idade">Insira a idade</string>
    <string name="add_contacto">ADICIONAR NOVO CONTACTO</string>
    <string name="contacto">Contacto</string>
    <string name="email">Email</string>
    <string name="telefone">Numero de telefone</string>
    <array name="fruit">
        <item>Banana</item>
        <item>Laranja</item>
        <item>Manga</item>
        <item>Figo</item>
        <item>Abacate</item>
        <item>Melancia</item>
    </array>
</resources>