<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".agendactivity">

    <ImageView
        android:id="@+id/image_agenda"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginHorizontal="5dp"
        android:src="@drawable/banner_agenda"
       android:scaleType="centerCrop"/>
    <SearchView
        android:id="@+id/sv_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:layout_marginHorizontal="5dp"
        android:layout_below="@id/image_agenda"
        android:layout_marginTop="10dp"/>
    <Button
        android:id="@+id/btn_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_contacto"
        android:layout_below="@id/sv_edit"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="10dp"
        />
    <EditText
        android:id="@+id/edit_contacto"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contacto"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/btn_add"
        android:drawableLeft="@drawable/ic_contacto_24"
        />
    <EditText
        android:id="@+id/edit_telefone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/telefone"
        android:layout_marginHorizontal="5dp"
        android:layout_below="@+id/edit_contacto"
        android:drawableLeft="@drawable/ic_phone"
        />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginHorizontal="5dp"
        android:layout_below="@+id/edit_telefone"
        android:drawableLeft="@drawable/ic_email"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="400dp">
        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="SALVAR "
            android:layout_marginHorizontal="10dp"
            />

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="EDITAR"
            android:layout_marginHorizontal="10dp"/>
    </LinearLayout>

</RelativeLayout>